--- a/public/style.css
+++ b/public/style.css
@@ -24,11 +24,14 @@ body {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
-#buttons {
+#container h2 {
+    margin: 0;
+}
+
+#button-container {
     margin-top: 20px;
     display: flex;
-    flex-grow: 1;
-    gap: 5px;
+    justify-content: space-evenly;
 }
 
 .btn {
