--- a/views/doc.html
+++ b/views/doc.html
@@ -1,2 +1,2 @@
-<redoc spec-url='{{ .Url }}'></redoc>
+<redoc spec-url='https://raw.githubusercontent.com/{{ .Owner }}/{{ .Repo }}/{{ .Ref }}/{{ .Path }}'></redoc>
 <script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"> </script>
