setting the company name as an env var

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -3,6 +3,6 @@
         <img src="/favicon.ico" alt="company logo">
     </a>
     <a href="/">
-        <h1>Leo Evil Inc'</h1>
+        <h1>{{ .CompanyName }}</h1>
     </a>
 </header>
