allow setting favicon and company logo path/url

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,6 +1,6 @@
 <header>
     <a href="/">
-        <img src="/favicon.ico" alt="company logo">
+        <img src="{{ .CompanyLogo }}" alt="company logo">
     </a>
     <a href="/">
         <h1>{{ .CompanyName }}</h1>
