Serve from /docs

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,8 +1,8 @@
 <header>
-    <a href="/">
+    <a href="/docs/">
         <img src="{{ .CompanyLogo }}" alt="company logo">
     </a>
-    <a href="/">
+    <a href="/docs/">
         <h1>{{ .CompanyName }}</h1>
     </a>
 </header>
