rename company* to header* +  reuse logo for favicon

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,8 +1,8 @@
 <header>
     <a href="/">
-        <img src="{{ .CompanyLogo }}" alt="company logo">
+        <img src="{{ .HeaderLogo }}" alt="header logo">
     </a>
     <a href="/">
-        <h1>{{ .CompanyName }}</h1>
+        <h1>{{ .HeaderTitle }}</h1>
     </a>
 </header>
