--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>{{ .CompanyName }} Api</title>
+    <title>{{ .HeaderTitle }} Api</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="{{ .HeaderLogo }}">
 </head>
 
 <body>
