--- a/public/style.css
+++ b/public/style.css
@@ -62,8 +62,11 @@ header {
     align-items: center;
     text-align: center;
 
-    border-bottom: 1px solid #ccc;
+    background-color: black;
+    border-bottom: 1px solid #232323;
     padding: 0.75em;
+
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     
     height: 4em;
 }
