--- a/public/style.css
+++ b/public/style.css
@@ -61,6 +61,7 @@ header {
     display: flex;
     align-items: center;
     text-align: center;
+    justify-content: space-between;
 
     border-bottom: 1px solid #ccc;
     padding: 0.75em;
