--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,8 +1,8 @@
 <header>
-    <a href="/">
+    <a href="{{ .PathPrefix }}/">
         <img src="{{ .HeaderLogo }}" alt="header logo">
     </a>
-    <a href="/">
+    <a href="{{ .PathPrefix }}/">
         <h1>{{ .HeaderTitle }}</h1>
     </a>
 </header>
