Allow different favicon and header logo

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,6 +1,6 @@
 <header>
     <a href="{{ .PathPrefix }}/">
-        <img src="{{ .HeaderLogo }}" alt="header logo">
+        <img src="{{ .PathPrefix }}/header-image" alt="header image">
     </a>
     <a href="{{ .PathPrefix }}/">
         <h1>{{ .HeaderTitle }}</h1>
