--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ .PathPrefix }}/style.css">
-    <link rel="icon" href="{{ .PathPrefix }}{{ .Favicon }}">
+    <link rel="icon" href="{{ .PathPrefix }}/favicon.ico">
 </head>
 
 <body>
