--- a/views/doc.html
+++ b/views/doc.html
@@ -1,2 +1,2 @@
-<redoc spec-url='{{ .RootUrl }}/{{ .Ref }}/{{ .Path }}'></redoc>
+<redoc spec-url='{{ .Path }}'></redoc>
 <script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"> </script>
