--- a/public/style.css
+++ b/public/style.css
@@ -63,7 +63,9 @@ header {
     text-align: center;
     justify-content: space-between;
 
-    border-bottom: 1px solid #ccc;
+    background-color: {{ .HeaderColor }};
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+
     padding: 0.75em;
     
     height: 4em;
