--- a/public/style.css
+++ b/public/style.css
@@ -62,13 +62,14 @@ header {
     align-items: center;
     text-align: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 
     background-color: {{ .HeaderColor }};
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 
     padding: 0.75em;
     
-    height: 4em;
+    min-height: 4em;
 }
 
 header img {
